Added time of day checks to abilities for dynamis farming

--- a/EasyFarm/EasyFarm.csproj
+++ b/EasyFarm/EasyFarm.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Classes\Range.cs" />
     <Compile Include="Classes\Serialization.cs" />
     <Compile Include="Classes\TimeWaiter.cs" />
+    <Compile Include="Classes\VanaTime.cs" />
     <Compile Include="Classes\XmlPersister.cs" />
     <Compile Include="Infrastructure\InverseBooleanConverter.cs" />
     <Compile Include="Logging\ILogger.cs" />
